--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <groupId>us.codecraft</groupId>
+    <groupId>com.github.kutear</groupId>
     <version>0.7.4</version>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
@@ -14,8 +14,7 @@
     <artifactId>webmagic-parent</artifactId>
     <name>webmagic-parent</name>
     <description>
-        A crawler framework. It covers the whole lifecycle of crawler: downloading, url management, content
-        extraction and persistent. It can simply the development of a specific crawler.
+        fork from https://github.com/code4craft/webmagic/
     </description>
     <url>https://github.com/code4craft/webmagic/</url>
     <developers>
@@ -433,4 +432,17 @@
             </distributionManagement>
         </profile>
     </profiles>
+
+    <repositories>
+        <repository>
+            <id>alimaven</id>
+            <url>https://maven.aliyun.com/repository/public</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>alimaven</id>
+            <url>https://maven.aliyun.com/repository/public</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
